<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:logo="@drawable/ic_calculator_40"
        android:background="@color/green_dark"
        app:title="@string/time_calculator"
        app:subtitle="@string/its_simple_time_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstOperandET"
        android:layout_width="170dp"
        android:layout_height="@dimen/height"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second_operand_ET"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <EditText
        android:id="@+id/second_operand_ET"
        android:layout_width="170dp"
        android:layout_height="@dimen/height"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstOperandET"
        app:layout_constraintTop_toTopOf="@+id/firstOperandET" />

    <Button
        android:id="@+id/plusBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green_light"
        android:text="@string/plus"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintEnd_toStartOf="@+id/minusBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstOperandET" />

    <Button
        android:id="@+id/minusBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green_light"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusBTN"
        app:layout_constraintTop_toTopOf="@+id/plusBTN" />

    <TextView
        android:id="@+id/result_TV"
        android:layout_width="170dp"
        android:layout_height="@dimen/height"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusBTN" />
</androidx.constraintlayout.widget.ConstraintLayout>